<resources>
    <string name="app_name">SaveAccount</string>

    <string name="add_Site">Site Name</string>
    <string name="add_Id">ID</string>
    <string name="add_password">Password</string>

    <string name="loading_account_empty">계정을 추가해주세요</string>
    <string name="loading_accounts_error">계정을 찾을 수 없습니다.</string>
    <string name="loading_success">로딩에 성공했습니다.</string>

    <string name="empty_account_error">계정 정보가 비어있습니다.</string>
    <string name="account_save_success">계정 정보가 저장되었습니다.</string>

    <string name="category_all">모두</string>
    <string name="category_game">게임</string>
    <string name="category_sns">SNS</string>
    <string name="category_security">보안</string>
    <string name="category_study">공부</string>
    <string name="category_other">기타</string>

    <string name="menu_refresh">새로고침</string>
    <string name="menu_darktheme">다크 테마</string>
    <string name="menu_filter">계정 필터</string>

    <string name="save_btn">저장하기</string>

    <string name="delete_dialog_title">확인해주세요</string>
    <string name="delete_dialog_content">삭제하시겠습니까?</string>
    <string name="delete_dialog_action">Delete</string>
    <string name="delete_dialog_cancel">Cancel</string>

    <string name="darktheme_dialog_title">Choose Theme</string>
</resources>
